feat: Enhance PWA capabilities and offline support
Integrate PWA features for better offline experience and installability.
This includes:
- Adding iOS icons for better app launching experience.
- Updating manifest with screenshots and categories.
- Improving service worker for more robust offline caching and navigation.
- Introducing a `usePWA` hook to manage offline status and installation prompts.
- Displaying offline status and install prompt in the UI.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
+    
+    <!-- iOS Icons -->
+    <link rel="apple-touch-icon" href="https://img.icons8.com/fluency/192/shopping-basket.png">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
